tests/interpreter/call-expression-arity-error.stderr
error: expected 0 arguments, got 1
 --> $DIR/call-expression-arity-error.lox:2:1
  |
2 | f(1);
  | ^^^^
