tests/interpreter/call-expression-arity-error.lox
fn f() {}
f(1);
